[project]
name = "lightbike-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dm-tree>=0.1.10",
    "gymnasium>=1.2.2",
    "lz4>=4.4.5",
    "opencv-python>=4.13.0.92",
    "pettingzoo>=1.26.1",
    "pillow>=12.2.0",
    "rllib>=0.0.1",
    "scipy>=1.17.1",
    "torch>=2.12.0",
]
[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
